@@ -1,3 +1,14 @@
+2006-07-25  Johan Dahlin  <jdahlin@async.com.br>
+
+	reviewed by: Henrique Romano  <henrique@async.com.br>
+
+	* gazpacho-plugin/kiwiwidgets.xml:
+	* kiwi/ui/gazpacholoader.py:
+	* kiwi/ui/widgets/button.py:
+	* tests/test_proxy.py:
+
+	Add ProxyButton support, Fixes #2698
+
 2006-07-21  Ronaldo Maia <romaia@async.com.br>
 
 	reviewed by: Johan Dahlin  <jdahlin@async.com.br>
